# grade

./: CMakeLists.txt  README.md  add_score.cpp  add_score.hpp  grade.cpp  main_window.cpp  main_window.hpp  unittests.cpp
